# vehicle-emissions-package

./: .gitignore  LifeCycle.html  README.md  index.html  pyproject.toml
src/pkm_lifecycle_emissions/: __init__.py  model.py
src/vehicle_emissions_package/: __init__.py  api.py  model.py
